--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-  "jobs_path": "zai-jules-manager/zai_jobs.jsonl",
-  "events_path": "zai-jules-manager/zai_events.jsonl",
-  "monitor_state_path": "zai-jules-manager/.zai_monitor_state.json",
-  "watcher_state_path": "zai-jules-manager/.zai_watcher_state.json",
+  "jobs_path": "jules-manager/jobs.jsonl",
+  "events_path": "jules-manager/events.jsonl",
+  "monitor_state_path": "jules-manager/.monitor_state.json",
+  "watcher_state_path": "jules-manager/.watcher_state.json",
   "monitor_poll_seconds": 45,
   "watcher_poll_seconds": 1,
   "stuck_minutes": 20,
   "api_base": "https://jules.googleapis.com/v1",
-  "mcp_command": ["python", "zai-jules-manager/mcp-server/jules_mcp_server.py"],
-  "zai_command": ["zai", "handle-event"]
+  "mcp_command": ["python", "jules-manager/mcp-server/jules_mcp_server.py"],
+  "event_command": ["python", "jules-manager/scripts/event_handler.py"]
 }
