feat: migrate to Jules v1alpha API and update tests
- Rewrite MCP server for v1alpha endpoints (sessions/activities/sources)
- Switch auth from Bearer token to x-goog-api-key header
- Update monitor for session-based polling and activity detection
- Update all docs and config to use JULES_API_KEY
- Rewrite tests to match new API (47 tests passing)

--- a/jules-mpc-ts/config.json
+++ b/jules-mpc-ts/config.json
@@ -6,7 +6,7 @@
   "monitor_poll_seconds": 45,
   "watcher_poll_seconds": 1,
   "stuck_minutes": 20,
-  "api_base": "https://jules.googleapis.com/v1",
+  "api_base": "https://jules.googleapis.com/v1alpha",
   "mcp_command": ["node", "jules-manager/build/mcp-server/jules_mcp_server.js"],
   "event_command": ["node", "jules-manager/scripts/event_handler.js"]
 }
